// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcoreBreadcrumbs - Render and click a crumb 1`] = `
<div
  id="breadcrumb-table"
>
  <div
    className="crumb"
    id="root"
    key="root-crumb"
    onClick={[Function]}
  >
    &gt; root
  </div>
  <div
    className="crumb"
    id="TestFolder"
    key="0"
    onClick={[Function]}
  >
    &gt; Test Folder
  </div>
</div>
`;

exports[`ProcoreBreadcrumbs - Render and click root crumb 1`] = `
<div
  id="breadcrumb-table"
>
  <div
    className="crumb"
    id="root"
    key="root-crumb"
    onClick={[Function]}
  >
    &gt; root
  </div>
  <div
    className="crumb"
    id="TestFolder"
    key="0"
    onClick={[Function]}
  >
    &gt; Test Folder
  </div>
</div>
`;

exports[`ProcoreBreadcrumbs - Should render 1`] = `
<div
  className="breadcrumbTable"
>
  <div
    className="crumb"
    id="root"
    key="root-crumb"
    onClick={[Function]}
  >
    &gt; root
  </div>
</div>
`;
